# HorRAGor_2

./: .env.example  .gitignore  Dockerfile.api  Dockerfile.database  Dockerfile.frontend  EXPLICATIONS_MODIFICATIONS.md  HorRAGor_presentation.pptx  QUICKSTART.md  README.md  docker-compose.yml  logger.py  start.py  start_with_auth.bat  start_with_auth.sh  test_auth.py
FAISS/: __init__.py  connection.py  faiss_service.py  models.py
agents/: README.md  chat_terminal.py  config.py  graph.py  nodes.py  nodes_narrateur.py  nodes_rag.py  nodes_wikipedia.py  prompts.py  pyproject.toml  router.py  state.py
agents/tests/: conftest.py  test_graph.py  test_nodes.py  test_nodes_narrateur.py  test_nodes_rag.py  test_nodes_wikipedia.py  test_router.py  test_sql_tools.py  test_validation_nodes.py  test_vector_tools.py  test_wiki.py  test_wiki_local.py
agents/tools/: sql_tools.py  test_wiki_local.py  vector_tools.py  wiki_tools.py
api/: auth_config.py  auth_routes.py  auth_utils.py  graph.mmd  main.py  pyproject.toml  routes.py  routes_monitoring.py  schemas.py
api/modules/: __init__.py  chat_service.py  database_client.py  supabase_service.py
api/monitoring/: langfuse_callback.py  langfuse_client.py  monitoring_service.py
api/tests/: conftest.py  test_chat_servise.py  test_film.py  test_health.py  test_metadata.py  test_routes_chat.py  test_wiki.py
app/: app.py
app/pages/: __init__.py
database/: README.md  connection.py  create_auth_tables.py  faiss_service.py  main.py  models.py  populate.py  pyproject.toml  queries.py  routes_db.py
database/tables/: __init__.py  base.py  collections.py  film_genres.py  films.py  genres.py  realisateurs.py  refresh_tokens.py  scores_imdb.py  scores_rt.py  scores_tmdb.py  users.py
database/tests/: conftest.py  test_connection.py  test_faiss_service.py  test_models.py  test_populate.py  test_queries.py
frontend/: .env.example  .gitignore  QUICKSTART.md  README.md  app.py  pyproject.toml  pytest.ini  requirements.txt  start.py  start_frontend.bat  start_frontend.ps1  test_app.py
frontend/.streamlit/: config.toml
frontend/components/: __init__.py  auth_components.py  components.py
frontend/tests/: README.md  __init__.py  conftest.py  test_api_client.py  test_components.py  test_integration.py
frontend/utils/: __init__.py  api_client.py  auth_client.py
monitoring/: .env.exemple_langfuse  docker-compose.yaml  langfuse_client.py  readme.md
shared/: embeddings.py  schemas.py
