[project]
name = "frontend"
version = "0.1.0"
description = "Interface Streamlit pour HorRAGor - Chatbot d'horreur avec ReAct Agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.30.0",
    "requests>=2.31.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pillow>=10.0.0",
]
